avoid @media, just wrap it insted here

--- a/hamro-hotel/src/app/components/footer/footer.component.scss
+++ b/hamro-hotel/src/app/components/footer/footer.component.scss
@@ -39,32 +39,30 @@ footer {
             }
         }
     }
-    
+
     .last-section {
         .last-footer-item {
+            margin-top: 1rem;
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
+            align-items: center;
             gap: 0.4em;
 
-            @media (max-width: 1300px) {
-                flex-direction: column;
-                align-items: center;
-                p {
-                    margin-bottom: -1em;
-                }
+            p,
+            h1 {
+                margin: 0;
             }
-            p {
-                align-self: center;
 
+            p {
                 @media (max-width: 400px) {
-                    font-size: 0.5em;
+                    font-size: 0.7em;
                 }
             }
             h1 {
                 color: rgb(89, 3, 3);
-
                 @media (max-width: 400px) {
-                    font-size: 1em;
+                    font-size: 1.3em;
                 }
             }
         }
